Move subcommands into main command