@@ -1,10 +1,11 @@
-package com.rappytv.labygpt.commands;
+package com.rappytv.labygpt.command;
 
 import com.rappytv.labygpt.GPTAddon;
+import com.rappytv.labygpt.api.GPTMessage;
 import com.rappytv.labygpt.api.GPTRequest;
-import com.rappytv.labygpt.commands.subcommands.GPTClearSubCommand;
-import com.rappytv.labygpt.commands.subcommands.GPTHistorySubCommand;
+import com.rappytv.labygpt.api.GPTRole;
 import net.labymod.api.client.chat.command.Command;
+import net.labymod.api.client.chat.command.SubCommand;
 import net.labymod.api.client.component.Component;
 import net.labymod.api.client.component.format.NamedTextColor;
 import net.labymod.api.util.I18n;
@@ -18,8 +19,8 @@ public class GPTCommand extends Command {
         super("gpt");
 
         this.addon = addon;
-        withSubCommand(new GPTClearSubCommand());
-        withSubCommand(new GPTHistorySubCommand());
+        withSubCommand(new ClearSubCommand());
+        withSubCommand(new HistorySubCommand());
     }
 
     @Override
@@ -48,7 +49,7 @@ public class GPTCommand extends Command {
         ).thenRun(() -> {
             // Callback logic when the request is done:
             if (!request.isSuccessful() || request.getOutput() == null) {
-                GPTAddon.queryHistory.remove(GPTAddon.queryHistory.size() - 1);
+                GPTAddon.queryHistory.removeLast();
                 displayMessage(Component.empty().append(GPTAddon.prefix).append(Component.text(
                     Objects.requireNonNullElseGet(request.getError(),
                         () -> I18n.translate("labygpt.messages.requestError")),
@@ -64,5 +65,54 @@ public class GPTCommand extends Command {
         });
 
         return true;
+    }
+
+    public static class ClearSubCommand extends SubCommand {
+
+        public ClearSubCommand() {
+            super("clear");
+        }
+
+        @Override
+        public boolean execute(String prefix, String[] arguments) {
+            if(GPTAddon.queryHistory.isEmpty()) {
+                displayMessage(Component.empty().append(GPTAddon.prefix).append(Component.translatable("labygpt.messages.alreadyEmptyHistory", NamedTextColor.RED)));
+                return true;
+            }
+            GPTAddon.queryHistory.clear();
+            displayMessage(Component.empty().append(GPTAddon.prefix).append(Component.translatable("labygpt.messages.historyCleared", NamedTextColor.GREEN)));
+            return true;
+        }
+    }
+
+    public static class HistorySubCommand extends SubCommand {
+
+        public HistorySubCommand() {
+            super("history");
+        }
+
+        @Override
+        public boolean execute(String prefix, String[] arguments) {
+            if(GPTAddon.queryHistory.size() < 2) {
+                displayMessage(Component.empty().append(GPTAddon.prefix).append(Component.translatable("labygpt.messages.emptyHistory", NamedTextColor.RED)));
+                return true;
+            }
+
+            Component component = Component.empty();
+            for(int i = 0; i < GPTAddon.queryHistory.size(); i++) {
+                GPTMessage message = GPTAddon.queryHistory.get(i);
+                String name = message.name.isEmpty() ? labyAPI.getName() : message.name;
+                if(message.role != GPTRole.System)
+                    component
+                        .append(Component.text(i == 0 ? "" : "\n"))
+                        .append(Component.text("[", NamedTextColor.DARK_GRAY))
+                        .append(Component.text(name))
+                        .append(Component.text("] ", NamedTextColor.DARK_GRAY))
+                        .append(Component.text(message.content.replace("\n\n", ""), NamedTextColor.WHITE));
+            }
+
+            displayMessage(component);
+            return true;
+        }
     }
 }
